lifting-log-web/src/Routes/EditTemplatePage.css
.edit-template-options {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 15px;
    margin-bottom: 10px;
    background-color: rgb(37, 37, 37);
}

.edit-template-options-button {
    height: 35px;
    font-size: 16px;
    width: 20%;
    margin-left: 5px;
    margin-right: 5px;
}

.edit-template-options-text {
    font-size: 16px;
}

.edit-template-form {
    display: flex;
    flex-direction: column;
    width: 85%;
    padding: 10px;
}

.edit-template-title {
    font-size: 26px;
}

.edit-template-exercise {
    background-color: rgb(37, 37, 37);
    border: 2px solid rgb(37, 37, 37);
    border-radius: 10px;
    margin-top: 20px;
    padding: 5px;
}

.edit-template-exercise-header {
    display: flex;
    flex-direction: row;
}

.edit-template-exercise-name {
    font-size: 16px;
}

.edit-template-set {
    display: flex;
    flex-direction: column;
    gap: 3px;
}

.edit-template-set-row {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 5px;
    width: 100%;
}

.edit-template-set-row-item {
    width: 70px;
    text-align: center;
    align-content: center;
    font-size: 14px;
    height: 28px;
}

.line-light {
    opacity: 60%;
}

.add-set-button {
    height: 34px;
    font-size: 16px;
    margin: 5px;
}

.delete-button {
    margin-left: auto;
    width: 24px;
    background-color: rgb(170, 0, 0);
    border-color: rgb(170, 0, 0);
}

.edit-template-add-exercise-button {
    height: 50px;
    font-size: 24px;
    margin-top: 20px;
}

.routine-note {
    margin-top: 8px;
    width: 80%;
}

